writing to a file uses the method